--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
   implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
   implementation "io.reactivex.rxjava3:rxandroid:$rxandroid_version"
 
+  implementation "net.lingala.zip4j:zip4j:$zip4j_version"
   implementation 'net.dongliu:apk-parser:2.6.10'
 
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
