--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     lifecycle_version = "2.2.0"
     rxjava_version = "3.0.13"
     rxandroid_version = "3.0.0"
+    zip4j_version = "2.8.0"
   }
   repositories {
     google()
