--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 
 dependencies {
 
+//  implementation fileTree(dir: 'libs', include: ['*.jar'])
+
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'androidx.core:core-ktx:1.5.0'
   implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -56,6 +58,9 @@ dependencies {
   implementation "io.reactivex.rxjava3:rxandroid:$rxandroid_version"
 
   implementation "net.lingala.zip4j:zip4j:$zip4j_version"
+
+  implementation "org.smali:baksmali:$baksmali_version"
+
   implementation 'net.dongliu:apk-parser:2.6.10'
 
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
