--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     rxjava_version = "3.0.13"
     rxandroid_version = "3.0.0"
     zip4j_version = "2.8.0"
+    baksmali_version = "2.5.2"
   }
   repositories {
     google()
