--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
   implementation "net.lingala.zip4j:zip4j:$zip4j_version"
   implementation 'net.dongliu:apk-parser:2.6.10'
+  implementation "org.smali:baksmali:$baksmali_version"
 
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
